# c-libs

./: .gitignore  CMakeLists.txt  Makefile
chain/: CMakeLists.txt
chain/inc/: chain.h
chain/include/: chain.h
chain/src/: CMakeLists.txt  chain.c
chain/tests/: chain-memtest.c  chain-test.c
class/: CMakeLists.txt
class/inc/: class.h
class/src/: class.c
class/tests/: CMakeLists.txt  class_fork.c  class_init.c
cmake/: build-my-lib.cmake
dataframes/: CMakeLists.txt
dataframes/inc/: dataframes.h
dataframes/include/: dataframes.h
dataframes/src/: CMakeLists.txt  dataframes.c
dataframes/tests/: dataframes-encode-decode.c
endian/: CMakeLists.txt
endian/inc/: endian.h
endian/include/: endian.h
endian/src/: CMakeLists.txt  endian.c
endian/tests/: endian.c
enumkv/: CMakeLists.txt
enumkv/inc/: enumkv.h
enumkv/src/: enumkv.c
enumkv/tests/: enumkv_add.c  enumkv_find.c  enumkv_init.c
object/: CMakeLists.txt
object/inc/: object.h
object/include/: object.h
object/src/: object.c
object/tests/: CMakeLists.txt  object.c
ringbuf/: CMakeLists.txt
ringbuf/inc/: ringbuf.h
ringbuf/include/: ringbuf.h
ringbuf/src/: ringbuf.c
ringbuf/tests/: ringbuf.c
serialhex2struct/: CMakeLists.txt
serialhex2struct/inc/: serialhex2struct.h
serialhex2struct/src/: serialhex2struct.c
serialhex2struct/tests/: serialhex2struct_conv.c
version/: CMakeLists.txt  version.h.in
version/src/: version.c
version/tests/: version-test.c
